<resources>
    <string name="app_name">Teste de Estilo</string>
    <string name="texto">Texto</string>
    <string name="letra">Tamanho da letra</string>
    <string name="estilo">Estilo</string>
    <string name="cor">Cor da letra</string>
    <string name="negrito">Negrito</string>
    <string name="italico">Itálico</string>
    <string name="maiuscula">Maiúsculas</string>
    <string name="vermelho">Vermelho</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
</resources>